syntax = "proto3"; 

package cloud.lianmi.im.order;
option go_package = "github.com/lianmi/servers/api/proto/order";

//请求参数
message SoldoutProductReq {
    //商品ID
    repeated string productIDs=1;
}

//响应参数
message SoldoutProductRsp {
   //未能成功下架的商品ID数组
   repeated string failProductIDs=1;

    //成功下架的时间
    fixed64 timeAt = 2;
}